Fixed some bugs and removed the scrollbar

--- a/Assets/Stylesheets/animations.css
+++ b/Assets/Stylesheets/animations.css
@@ -80,9 +80,9 @@
 
 @keyframes expanding-shadow {
     from, to {
-        box-shadow: 0px 0px 40px rgb(190, 190, 190, 0.5);
+        box-shadow: 0px 0px 30px rgb(190, 190, 190, 0.5);
     }
     50% {
-        box-shadow: 0px 0px 80px rgb(190, 190, 190, 0.8);
+        box-shadow: 0px 0px 60px rgb(190, 190, 190, 0.8);
     }
 }
