--- a/Assets/Stylesheets/reset.css
+++ b/Assets/Stylesheets/reset.css
@@ -20,10 +20,6 @@ p {
     font-size: 1.6rem;
 }
 
-article {
-    font-size: 2rem;
-}
-
 strong {
-    font-weight: 1000;
+    font-weight: 800;
 }
