--- a/Assets/Stylesheets/style-about-me.css
+++ b/Assets/Stylesheets/style-about-me.css
@@ -7,16 +7,24 @@ Contents:
 */
 
 html, body, div.carousell-layout, section {
-    block-size: 100%;
+    /* Ensures that the selected elements take up the full page */
+    width: 100%;
+    height: 100%;
 }
 
 html {
-    scroll-snap-type: y mandatory;
+    /* Allows for scroll snapping; proximity causes the scroll to 
+    snap less stricly and allows for more scrolling space */
+    scroll-snap-type: y proximity; 
 }
 
 body {
     background-color: rgb(22, 22, 22);
-    overflow: scroll;
+}
+
+/* Styles the heading for the left side of the title box */
+div#header-box{
+    display: flex;
 }
 
 /* Styling for the title box in the middle of the hero section */
@@ -41,7 +49,7 @@ div#title-box-left {
 }
 
 /* Organises the h1 element to fit perfectly with the image by aligning it */
-div#title-box-left > div.box > h1 {
+div#title-box-left > div#header-box > h1 {
     margin-left: 5%;
     align-self: center;
     height: auto;
@@ -53,7 +61,7 @@ div#title-box-left > div.box > h1 {
     border-bottom: 3px solid rgb(0, 88, 110);
 }
 /* Resize the profile picture to fit */
-div#title-box-left > div.box > img {
+div#title-box-left > div#header-box > img {
     margin-left: 1em;
     border-radius: 50%;
     object-fit: cover;
@@ -68,7 +76,25 @@ div#title-box-left > div.box > img {
 div#title-box-left > p {
     margin-top: 5%;
     margin-left: 2%;
-    position: relative;
+
+    font-family: sans-serif, monospace;
+    font-size: 2.5vh;
+    color: rgb(0, 88, 110);
+}
+
+/* Enlarge the first letter of the entire p element */
+div#title-box-left > p::first-letter {
+    font-size: 3vh;
+}
+
+/* Enlarge the links in the paragraph */
+div#title-box-left a {
+    font-size: 3.5vh;
+    transition: all 0.3s linear;
+}
+/* Add a hover effect to the link */
+div#title-box-left a:hover {
+    text-shadow: 2px 2px 10px rgba(0, 88, 110, 0.6);
 }
 
 div#title-box-right {
@@ -88,16 +114,11 @@ div#title-box-right {
 
 div#title-box-right > h1 {
     font-size: 5rem;
-
-    height: fit-content;
 }
 
 div#title-box-right > p {
     margin-top: 3%;
-
     font-size: 2rem;
-
-    height: fit-content;
 }
 
 div#title-box-right > div.scroll-prompt {
@@ -105,7 +126,6 @@ div#title-box-right > div.scroll-prompt {
     flex-direction: column;
     align-items: center;
     margin-top: 40%;
-    height: fit-content;
 
     font-size: 2rem;
 
@@ -115,6 +135,9 @@ div#title-box-right > div.scroll-prompt {
 section#content-section {
     justify-content: flex-start;
     flex-direction: column;
+
+    width: 100%;
+    height: 100%;
 }
 
 div#top-bar {
@@ -133,13 +156,13 @@ div#top-bar > ul.navbar > li:hover {
 }
 
 section#content-section > h1 {
-    max-width: 100%;
+    font-size: 5em;
     text-align: center;
 }
 
 section#content-section > div.carousell-layout {
     display: grid;
-    grid: 1fr / 175px 1fr 1fr 1fr 1fr 1fr 175px;
+    grid: 1fr / 30vw 1fr 1fr 1fr 1fr 30vw;
     gap: 20%;
     margin: auto;
     padding-right: 50px;
@@ -149,6 +172,9 @@ section#content-section > div.carousell-layout {
 
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
+
+    scrollbar-width: thin;
+    scrollbar-color: rgba(124, 124, 124, 0.4) rgba(0, 0, 0, 0.2);
 }
 
 div.carousell-layout > section {
@@ -156,8 +182,8 @@ div.carousell-layout > section {
     scroll-snap-align: center;
     scroll-snap-stop: always;
 
-    width: 350px;
-    height: 350px;
+    width: 30vw;
+    height: 55vh;
     
     background-color: antiquewhite;
 }
