--- a/Assets/Stylesheets/style-parallax.css
+++ b/Assets/Stylesheets/style-parallax.css
@@ -98,7 +98,7 @@ div#parallax-2 > div.title-box {
     flex-direction: column;
 
     width: 40vw;
-    height: 30vh;
+    height: 35vh;
 
     padding: 5%;
 
@@ -106,26 +106,26 @@ div#parallax-2 > div.title-box {
 }
 
 div#parallax-2 > div.title-box > h1 {
-    color: black;
+    color: white;
 
     font-size: 5em;
     text-align: center;
-    letter-spacing: 1px;
 
     margin: auto;
     margin-top: -5%;
     
     text-shadow: 0px 0px 30px rgba(255, 255, 255, 0.8);
+    border-bottom: 5px solid white;
 }
 
 div#parallax-2 > div.title-box > p {
-    color: black;
+    color: white;
 
-    font-size: 2em;
+    font: 4vh arial, helvetica, sans-serif;
     text-align: center;
 
     margin: auto;
-    margin-top: -10%;
+    margin-top: 5%;
     
     text-shadow: 0px 0px 30px rgba(255, 255, 255, 0.8);
 }
